--- a/src/index.css
+++ b/src/index.css
@@ -1,5 +1,15 @@
+:root {
+  --primary: #ffffff;
+  --purple: #393A73;
+  --violet: #AAAAD3;
+  --grey: #666;
+  --black: #222;
+  --grey90: rgba(222, 222, 222, 0.9);
+  --shadow: 0 1px 5px rgba(222, 222, 222, 0.9);
+}
+
 body {
   margin: 0;
   padding: 0;
-  font-family: sans-serif;
+  line-height: 1.6;
 }
