--- a/src/index.css
+++ b/src/index.css
@@ -6,10 +6,16 @@
   --black: #222;
   --grey90: rgba(222, 222, 222, 0.9);
   --shadow: 0 1px 5px rgba(222, 222, 222, 0.9);
+  --hover: #AAAAD3;
 }
 
 body {
   margin: 0;
   padding: 0;
   line-height: 1.6;
+  font-family: 'Open San', sans-serif;
+}
+
+.btn:hover {
+  color: var(--hover);
 }
