--- a/src/App.css
+++ b/src/App.css
@@ -2,17 +2,9 @@
   /* text-align: center; */
 }
 
-.App-header {
-  background-color: #1A535C;
-  height: 150px;
-  padding: 20px;
-  color: white;
-}
-
-.App-title {
-  font-size: 1.5em;
-}
-
-.App-intro {
-  font-size: large;
+.side-bar {
+  width: 20%;
+  float: left;
+  padding: 30px;
+  margin: 0;
 }
