--- a/src/containers/VenueItem.css
+++ b/src/containers/VenueItem.css
@@ -1,13 +1,25 @@
-
-
-.hour-price {
-  display: block;
-  float: right;
-  background-color: var(--black) !important;
-  color: var(--primary);
-  text-align: right !important;
+.venue-item {
+  max-width: 500px;
+  margin: 0;
+  padding: 0;
 }
 
-.venue-item {
-  border: none !important;
+.venue-content {
+  width: 100%;
+  height: 150px;
+  text-align: left;
+  color: var(--grey);
+}
+
+.venue-name {
+  font-weight: bold;
+  color: var(--black);
+}
+
+.venue-info {
+  font-weight: bold;
+}
+
+.venue-price {
+  display: flex;
 }
