--- a/src/index.css
+++ b/src/index.css
@@ -16,6 +16,11 @@ body {
   font-family: 'Open San', sans-serif;
 }
 
+h1, h2, h3, h4 {
+  margin: 0;
+  padding: 0;
+}
+
 .btn:hover {
   color: var(--hover);
 }
