--- a/src/containers/VenuesContainer.css
+++ b/src/containers/VenuesContainer.css
@@ -1,12 +1,11 @@
 .venue-container {
-  width: 75%;
   float: right;
   border-left: 2px solid var(--grey90);
   padding: 20px;
 }
 
 .top-box{
-  padding: 15px 0;
+  padding: 0;
   text-align: left;
 }
 
@@ -14,4 +13,16 @@
   display: grid;
   grid-gap: 20px;
   grid-template-columns: repeat(auto-fit, minmax(400px, 1fr));
+}
+
+.map-responsive-btn {
+  display: flex;
+  flex-direction: column;
+  align-items: flex-start;
+}
+
+@media(min-width: 1400px) {
+  .map-responsive-btn {
+    display: none;
+  }
 }
