--- a/src/index.css
+++ b/src/index.css
@@ -21,6 +21,19 @@ h1, h2, h3, h4 {
   padding: 0;
 }
 
-.btn:hover {
-  color: var(--hover);
+@media(max-width: 1400px) {
+  .main-container {
+    display: grid;
+    grid-template-columns: repeat(3, minmax(1fr));
+  }
+
+  .side-bar {
+    display: none;
+  }
+
+  .venue-container {
+    width: 100%;
+    grid-column: 1/4;
+    padding: 20px;
+  }
 }
