--- a/src/containers/VenueItem.css
+++ b/src/containers/VenueItem.css
@@ -2,16 +2,24 @@
   max-width: 500px;
   margin: 0;
   padding: 0;
+  box-shadow: var(--shadow);
+  transition: box-shadow 0.3s ease-in-out;
+}
+
+.venue-item:hover {
+  box-shadow: 0 5px 15px rgba(0,0,0,0.3);
 }
 
 .venue-content {
   width: 100%;
   height: 150px;
   text-align: left;
+  padding: 15px;
 }
 
 .venue-name {
   font-weight: bold;
+  padding-bottom: 10px;
 }
 
 .venue-info {
@@ -20,4 +28,25 @@
 
 .venue-price {
   display: flex;
+}
+
+.hour-rate, .day-rate {
+  flex: 1;
+  left: 58%;
+  width: 40%;
+  position: relative;
+  background-color: var(--black);
+  opacity: 0.9;
+  color: var(--primary);
+  text-align: right;
+  padding-right: 10px;
+}
+
+.day-rate {
+  display: flex;
+  flex-direction: row;
+  justify-content: flex-end;
+  left: 58%;
+  width: 40%;
+  margin-top: 5px;
 }
