--- a/src/index.css
+++ b/src/index.css
@@ -20,3 +20,8 @@ h1, h2, h3, h4 {
   margin: 0;
   padding: 0;
 }
+
+.btn:hover {
+  background-color: var(--primary) !important;
+  color: var(--hover) !important;
+}
