--- a/src/containers/VenueItem.css
+++ b/src/containers/VenueItem.css
@@ -52,6 +52,19 @@
   margin-top: 5px;
 }
 
+.hour-rate h2 {
+  display: inline-block;
+}
+
+.hour-rate:before {
+  content: '€';
+  font-size: 1.5em;
+}
+
+.day-rate:before {
+ content: '€';
+}
+
 span.rating {
   font-size: 1em;
 }
