minor change on padding of venue content

--- a/src/components/LikeButton.css
+++ b/src/components/LikeButton.css
@@ -23,3 +23,9 @@ span.copy {
   z-index: 9;
   animation: heart 1s 1 ease-in-out
 }
+
+@media(min-width: 700px) {
+  button {
+    margin-bottom: 230px;
+  }
+}
