--- a/src/containers/VenueItem.css
+++ b/src/containers/VenueItem.css
@@ -83,7 +83,9 @@ span.rating {
   .venue-item {
     max-width: 700px;
   }
+}
 
+@media(max-width: 700px) {
   .venue-cover {
     height: 400px;
   }
